@@ -117,7 +117,6 @@ DyssolMaterialsDatabase 3
 27 226 2 10 10000 1000 1e+09 9.6e-08  	$ Dynamic Viscosity [Pa·s]; Constant
 27 234 0 273 1973 1000 1e+09 273 0.804195 373 0.588593 473 0.464155 573 0.383151 673 0.326219 773 0.284017 873 0.251484 973 0.225637 1073 0.204609 1173 0.187166 1273 0.172463 1373 0.159902 1473 0.149046 1573 0.139571 1673 0.131228 1773 0.123827 1873 0.117216 1973 0.111275  	$ Density [kg/m<sup>3</sup>]; List of T-values
 27 235 0 273.16 647.14 1000 1e+09 273.16 7.77488e-10 278.15 7.6062e-10 283.15 7.43841e-10 288.15 7.27258e-10 293.15 7.10917e-10 298.15 6.94853e-10 323.15 6.19211e-10 348.15 5.51577e-10 373.15 4.91358e-10 398.15 4.37629e-10 423.15 3.89448e-10 448.15 3.46281e-10 473.15 3.07087e-10 498.15 2.71047e-10 523.15 2.37564e-10 548.15 2.06017e-10 573.15 1.75683e-10 583.15 1.63659e-10 593.15 1.5158e-10 598.15 1.45466e-10 603.15 1.39257e-10 613.15 1.26481e-10 623.15 1.12819e-10 633.15 9.73066e-11 638.15 8.7266e-11 643.15 7.58973e-11 644.15 7.26975e-11 645.15 6.89203e-11 646.15 6.38381e-11 647.14 4.77688e-11  	$ Permittivity [F/m]; List of T-values
-27 236 0 10 10000 1000 1e+09 10 3.45e-08 20 1.32e-07 30 2.91e-07 40 5.08e-07 50 7.83e-07 60 1.12e-06 70 1.5e-06 80 1.95e-06 90 2.45e-06 100 3e-06 110 3.61e-06 120 4.28e-06 130 5e-06 140 5.77e-06 150 6.6e-06 160 7.48e-06 170 8.41e-06 180 9.39e-06 190 1.04e-05 200 1.15e-05 210 1.27e-05 220 1.39e-05 230 1.51e-05 240 1.64e-05 250 1.78e-05 260 1.92e-05 270 2.06e-05 280 2.21e-05 290 2.37e-05 300 2.53e-05 310 2.7e-05 320 2.87e-05 330 3.04e-05 340 3.23e-05 350 3.41e-05 360 3.6e-05 370 3.8e-05 380 4e-05 390 4.21e-05 400 4.42e-05 410 4.64e-05 420 4.86e-05 430 5.09e-05 440 5.32e-05 450 5.56e-05 460 5.8e-05 470 6.05e-05 480 6.3e-05 490 6.56e-05 500 6.82e-05 510 7.09e-05 520 7.36e-05 530 7.63e-05 540 7.92e-05 550 8.2e-05 560 8.49e-05 570 8.79e-05 580 9.09e-05 590 9.4e-05 600 9.71e-05 610 0.0001 620 0.000103 630 0.000107 640 0.00011 650 0.000113 660 0.000117 670 0.00012 680 0.000124 690 0.000127 700 0.000131 710 0.000135 720 0.000138 730 0.000142 740 0.000146 750 0.00015 760 0.000154 770 0.000158 780 0.000162 790 0.000166 800 0.00017 810 0.000174 820 0.000178 830 0.000182 840 0.000187 850 0.000191 860 0.000195 870 0.0002 880 0.000204 890 0.000209 900 0.000213 910 0.000218 920 0.000223 930 0.000227 940 0.000232 950 0.000237 960 0.000242 970 0.000247 980 0.000252 990 0.000257 1000 0.000262 1010 0.000267 1020 0.000272 1030 0.000277 1040 0.000282 1050 0.000288 1060 0.000293 1070 0.000298 1080 0.000304 1090 0.000309 1100 0.000315 1110 0.00032 1120 0.000326 1130 0.000332 1140 0.000337 1150 0.000343 1160 0.000349 1170 0.000355 1180 0.000361 1190 0.000367 1200 0.000373 1210 0.000379 1220 0.000385 1230 0.000391 1240 0.000397 1250 0.000403 1260 0.00041 1270 0.000416 1280 0.000422 1290 0.000429 1300 0.000435 1310 0.000442 1320 0.000448 1330 0.000455 1340 0.000462 1350 0.000468 1360 0.000475 1370 0.000482 1380 0.000489 1390 0.000496 1400 0.000503 1410 0.00051 1420 0.000517 1430 0.000524 1440 0.000531 1450 0.000538 1460 0.000545 1470 0.000552 1480 0.00056 1490 0.000567 1500 0.000574 1510 0.000582 1520 0.000589 1530 0.000597 1540 0.000605 1550 0.000612 1560 0.00062 1570 0.000628 1580 0.000635 1590 0.000643 1600 0.000651 1610 0.000659 1620 0.000667 1630 0.000675 1640 0.000683 1650 0.000691 1660 0.000699 1670 0.000708 1680 0.000716 1690 0.000724 1700 0.000732 1710 0.000741 1720 0.000749 1730 0.000758 1740 0.000766 1750 0.000775 1760 0.000783 1770 0.000792 1780 0.000801 1790 0.000809 1800 0.000818 1810 0.000827 1820 0.000836 1830 0.000845 1840 0.000854 1850 0.000863 1860 0.000872 1870 0.000881 1880 0.00089 1890 0.000899 1900 0.000909 1910 0.000918 1920 0.000927 1930 0.000937 1940 0.000946 1950 0.000956 1960 0.000965 1970 0.000975 1980 0.000984 1990 0.000994 2000 0.001 2010 0.00101 2020 0.00102 2030 0.00103 2040 0.00104 2050 0.00105 2060 0.00106 2070 0.00107 2080 0.00108 2090 0.00109 2100 0.0011 2110 0.00111 2120 0.00112 2130 0.00113 2140 0.00114 2150 0.00116 2160 0.00117 2170 0.00118 2180 0.00119 2190 0.0012 2200 0.00121 2210 0.00122 2220 0.00123 2230 0.00124 2240 0.00125 2250 0.00126 2260 0.00127 2270 0.00128 2280 0.00129 2290 0.00131 2300 0.00132 2310 0.00133 2320 0.00134 2330 0.00135 2340 0.00136 2350 0.00137 2360 0.00138 2370 0.0014 2380 0.00141 2390 0.00142 2400 0.00143 2410 0.00144 2420 0.00145 2430 0.00146 2440 0.00148 2450 0.00149 2460 0.0015 2470 0.00151 2480 0.00152 2490 0.00154 2500 0.00155 2510 0.00156 2520 0.00157 2530 0.00158 2540 0.0016 2550 0.00161 2560 0.00162 2570 0.00163 2580 0.00165 2590 0.00166 2600 0.00167 2610 0.00168 2620 0.00169 2630 0.00171 2640 0.00172 2650 0.00173 2660 0.00175 2670 0.00176 2680 0.00177 2690 0.00178 2700 0.0018 2710 0.00181 2720 0.00182 2730 0.00184 2740 0.00185 2750 0.00186 2760 0.00188 2770 0.00189 2780 0.0019 2790 0.00191 2800 0.00193 2810 0.00194 2820 0.00196 2830 0.00197 2840 0.00198 2850 0.002 2860 0.00201 2870 0.00202 2880 0.00204 2890 0.00205 2900 0.00206 2910 0.00208 2920 0.00209 2930 0.00211 2940 0.00212 2950 0.00213 2960 0.00215 2970 0.00216 2980 0.00218 2990 0.00219 3000 0.0022 3010 0.00222 3020 0.00223 3030 0.00225 3040 0.00226 3050 0.00228 3060 0.00229 3070 0.00231 3080 0.00232 3090 0.00233 3100 0.00235 3110 0.00236 3120 0.00238 3130 0.00239 3140 0.00241 3150 0.00242 3160 0.00244 3170 0.00245 3180 0.00247 3190 0.00248 3200 0.0025 3210 0.00251 3220 0.00253 3230 0.00254 3240 0.00256  	$ Mass diffusion coefficient [m*m/s]; List of T-values
 
 21 CW97G1G9PPKP63NZ6R0L 	$ Compound's unique key
 22 N2 	$ Compound's name
